Small edits to index.html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <meta charset="utf-8"/>
         <link rel="stylesheet" href="css/style.css" />
         <link rel="prefetch" href="img/x_img.png" />
-        <link rel="prefetch" href="img/x_img.png" />
+        <link rel="prefetch" href="img/o_img.png" />
         <script src="js/script.js"></script>
+        <title>Tic tac toe</title>
     </head>
     <body>
         <h1>Tic-tac-toe</h1>
